<resources>
    <string name="app_name">KangooGift</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="eventos">Eventos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">inicio</string>
    <string name="title_activity_evento_detalles">EventoDetalles</string>
    <string name="title_activity_evento_detalle">EventoDetalle</string>
    <string name="add_evento">Añadir Evento</string>
    <string name="nombre">nombre</string>
    <string name="comentario">comentario</string>
    <string name="fecha">fecha</string>
    <string name="Añadir">Añadir</string>
    <string name="confirmarBorrarEvento">¿Desea borrar el evento?</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="borrar_evento">Borrar Evento</string>
    <string name="title_activity_persona_detalle">PersonaDetalle</string>
    <string name="edit_evento">editar_evento</string>
    <string name="Editar">Editar</string>
    <string name="add_persona">añadir persona</string>
    <string name="cumpleanos">cumpleaños</string>
    <string name="delete_persona">borrar persona</string>
    <string name="edit_persona">editar persona</string>
    <string name="add_regalo">añadir regalo</string>
    <string name="confirmarBorrarPersona">¿Desea borrar esta persona?</string>
    <string name="borrar_persona">Borrar Persona</string>
    <string name="edit_regalo">Editar Regalo</string>
    <string name="estado">comprado</string>
    <string name="confirmarBorrarRegalo">¿Desea eliminar este regalo?</string>
    <string name="borrar_regalo">Eliminar regalo</string>
    <string name="listado_string"></string>
</resources>
