<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_evento"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_sweep"
        app:showAsAction="always"
        android:title="@string/add_evento" />

    <item
        android:id="@+id/edit_evento"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="always"
        android:title="@string/edit_evento" />

    <item
        android:id="@+id/add_persona"
        android:orderInCategory="100"
        android:icon="@drawable/ic_person_add"
        app:showAsAction="always"
        android:title="@string/add_persona" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>