<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:id="@+id/estado" />

    <EditText
        android:id="@+id/comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comentario"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Editar"
        android:id="@+id/btnAddRegalo"
        android:layout_gravity="right" />


</LinearLayout>