<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/delete_persona"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_sweep"
        app:showAsAction="always"
        android:title="@string/delete_persona" />

    <item
        android:id="@+id/edit_persona"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="always"
        android:title="@string/edit_persona" />

    <item
        android:id="@+id/add_regalo"
        android:orderInCategory="100"
        android:icon="@drawable/ic_card_giftcard"
        app:showAsAction="always"
        android:title="@string/add_regalo" />

</menu>